@@ -8,6 +8,10 @@ import org.springframework.cloud.netflix.eureka.server.EnableEurekaServer;
 @SpringBootApplication
 public class EurekaApplication {
 
+    /**
+     * java9 and java9+ need to add VM options --add-modules java.xml.bind
+     * @param args
+     */
     public static void main(String[] args) {
         SpringApplication.run(EurekaApplication.class, args);
     }
